[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Šarūnas Navickas <sarunas@navickas.info>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.4.5"
ipykernel = "^6.5.0"
gensim = "^4.1.2"
sklearn = "^0.0"
spacy = "^3.1.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
